--- a/app/src/main/res/layout/dialog_event_marker.xml
+++ b/app/src/main/res/layout/dialog_event_marker.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/card_background"
-    android:elevation="5dp"
+    android:layout_alignParentTop="true"
+    android:clipToPadding="false"
     android:orientation="vertical"
+    android:background="@drawable/selector_grey"
+
     >
-    <!--android:background="@android:drawable/dialog_holo_light_frame"-->
+    <!--android:background="@android:drawable/dialog_holo_light_frame"
+
+    -->
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/card_background"
+        >
+
     <TextView
         android:id="@+id/textView_dialog_address"
         style="@style/SecondaryTextView"
@@ -23,19 +34,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView_dialog_date"
-        style="@style/SecondaryTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="text"
-        android:textAlignment="center"
-        android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_dialog_address" />
 
     <TextView
         android:id="@+id/textView_dialog_event"
@@ -66,5 +64,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView_dialog_event"
         app:layout_constraintTop_toBottomOf="@+id/textView_dialog_date" />
+
+    <TextView
+        android:id="@+id/textView_dialog_date"
+        style="@style/SecondaryTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="text"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_dialog_address" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
